--- a/slides/presentacion.qmd
+++ b/slides/presentacion.qmd
@@ -10,538 +10,571 @@ format:
     chalkboard: true
     preview-links: auto
     css: styles.css
-    footer: "Lucy AI Assistant - IA Multimodal Avanzada para Educación y Más"
+    footer: "Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨"
     transition: slide
     background-transition: fade
     highlight-style: github
     code-fold: true
     code-summary: "Mostrar Código"
     lang: es
+    auto-animate: true
+    auto-animate-easing: ease-in-out
+    auto-animate-duration: 0.5
 ---
 
-## Bienvenidos a Lucy 🤖✨ {.center}
+## Bienvenidos a Lucy 🤖✨ {.center auto-animate="true"}
 
-::: {.columns}
-
+::::: columns
 ::: {.column width="45%"}
-![](../figs/Lucy-AI-Assistant-Web.png){fig-align="center" width="100%"}
+![](/presentacion_files/lucy_sc_main.png){fig-align="center" width="100%"}
 :::
 
 ::: {.column width="55%"}
-### Compañero Avanzado de Aprendizaje IA
+### Tu Tutor Personal de IA Avanzada
 
-- **🖼️ IA Multimodal** - Análisis de Texto + Imagen
-- **🔒 Autenticación Segura** - Sistema de gestión de usuarios
-- **📚 Enfoque Educativo** - Estudiantes y educadores
-- **💬 Contexto Persistente** - Historial de conversaciones
-- **🎨 Interfaz Personalizable** - Temas claro/oscuro
-- **📱 Móvil Optimizado** - Compatible con todos los dispositivos
+-   **🖼️ IA Multimodal** - Texto + Imágenes
+-   **🔒 Seguridad Total** - Gestión de usuarios
+-   **📚 Enfoque Educativo** - Todos los niveles
+-   **💬 Memoria Persistente** - Recuerda conversaciones
+-   **🎨 Interfaz Adaptable** - Claro/Oscuro
+-   **📱 Acceso Universal** - Todos los dispositivos
+:::
+:::::
+
+::: notes
+Lucy es tu compañero de aprendizaje personal que nunca se cansa, nunca juzga y siempre está disponible para ayudarte.
 :::
 
+## ¿Por Qué Lucy es Tu Tutor Ideal? 🎯 {auto-animate="true"}
+
+::::: columns
+::: {.column width="50%" auto-animate="true"}
+### 🔄 Nunca Se Cansa
+
+-   Disponible 24/7 para tus dudas
+-   Paciencia infinita con preguntas repetidas
+-   Siempre mantiene un tono positivo
+-   No hay horarios ni citas necesarias
+
+### 💡 Aprende Tu Estilo
+
+-   Se adapta a tu ritmo de aprendizaje
+-   Recuerda tus temas difíciles
+-   Personaliza explicaciones para ti
+-   Construye sobre tu conocimiento previo
 :::
 
-## Características Revolucionarias 🚀
+::: {.column width="50%" auto-animate="true"}
+### 📸 Ve y Comprende
 
-::: {.panel-tabset}
+-   Analiza tus tareas fotografiadas
+-   Interpreta diagramas y gráficos
+-   Lee ecuaciones manuscritas
+-   Entiende mapas y esquemas
 
-### Capacidades Multimodales
-```{mermaid}
-%%| fig-width: 10
-%%| fig-height: 5
-flowchart TD
-    A[Entrada del Estudiante] --> B{Tipo de Contenido}
-    B --> C[📝 Preguntas de Texto]
-    B --> D[📸 Carga de Imágenes]
-    B --> E[📊 Análisis de Documentos]
-    
-    C --> F[Procesamiento IA]
-    D --> F
-    E --> F
-    
-    F --> G[📋 Análisis Detallado]
-    F --> H[💡 Insights de Aprendizaje]
-    F --> I[🎯 Ayuda Personalizada]
-    
-    style A fill:#e1f5fe
-    style F fill:#f3e5f5
-    style G fill:#e8f5e8
-    style H fill:#fff3e0
-    style I fill:#fce4ec
-```
+### 🎓 Método Socrático
 
-### Aplicaciones Educativas
-- **📚 Ayuda con Tareas**: Sube hojas de problemas para soluciones paso a paso
-- **🔬 Análisis de Laboratorio**: Analiza datos experimentales e imágenes
-- **📖 Revisión de Documentos**: Obtén insights de libros de texto y papers
-- **🧮 Soporte Matemático**: Resolución visual de problemas con diagramas
-- **🌍 Aprendizaje de Idiomas**: Vocabulario y contexto basado en imágenes
-- **🎨 Proyectos Creativos**: Análisis artístico y retroalimentación creativa
+-   Te guía hacia las respuestas
+-   Hace preguntas que te hacen pensar
+-   Explica el "¿por qué?" no solo el "¿cómo?"
+-   Fomenta el pensamiento crítico
+:::
+:::::
 
-### Contexto de Aprendizaje Persistente
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
+:::
+
+## Apoyo Académico Completo 📚 {auto-animate="true"}
+
+::::::: panel-tabset
+### Matemáticas 📐
+
+::: {auto-animate="true"}
+-   **Álgebra**: Ecuaciones paso a paso
+-   **Geometría**: Análisis visual de figuras
+-   **Cálculo**: Derivadas e integrales explicadas
+-   **Estadística**: Interpretación de datos y gráficos
+-   **Ejemplo**: Sube foto de tu ejercicio → Solución detallada
+:::
+
+### Ciencias 🔬
+
+::: {auto-animate="true"}
+-   **Física**: Problemas de mecánica y óptica
+-   **Química**: Balanceo de ecuaciones y estequiometría
+-   **Biología**: Análisis de células y ecosistemas
+-   **Laboratorio**: Interpreta resultados experimentales
+-   **Ejemplo**: Foto de microscopio → Identificación celular
+:::
+
+### Idiomas 🌍
+
+::: {auto-animate="true"}
+-   **Gramática**: Corrección y explicación de errores
+-   **Vocabulario**: Contexto cultural de palabras
+-   **Traducción**: No solo traduce, explica diferencias
+-   **Escritura**: Mejora redacción y estilo
+-   **Ejemplo**: Texto en inglés → Análisis gramatical completo
+:::
+
+### Historia y Sociales 🏛️
+
+::: {auto-animate="true"}
+-   **Análisis**: Documentos históricos y mapas
+-   **Cronología**: Líneas de tiempo interactivas
+-   **Geografía**: Interpretación cartográfica
+-   **Civismo**: Comprensión de sistemas políticos
+-   **Ejemplo**: Mapa histórico → Contexto y significado
+:::
+:::::::
+
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
+:::
+
+## Casos Reales de Estudiantes 🌟 {auto-animate="true"}
+
+::::: {.columns auto-animate="true"}
+::: {.column width="50%"}
+### 📐 María - Matemáticas
+
+**Problema**: Geometría analítica confusa **Solución Lucy**: - Fotografió su ejercicio de coordenadas - Lucy explicó paso a paso la distancia entre puntos - Proporcionó 3 ejercicios similares para practicar - **Resultado**: De 6/10 a 9/10 en el examen
+
+### 🧪 Carlos - Química
+
+**Problema**: Balanceo de ecuaciones químicas **Solución Lucy**: - Subió foto de ecuación desequilibrada - Lucy mostró método sistemático de balanceo - Explicó la ley de conservación de masa - **Resultado**: Ahora balancea solo cualquier ecuación
+:::
+
+::: {.column width="50%"}
+### 📚 Ana - Literatura
+
+**Problema**: Análisis de poemas complejos **Solución Lucy**: - Compartió poema de Neruda - Lucy identificó metáforas y simbolismo - Explicó contexto histórico del autor - **Resultado**: Mejoró comprensión lectora 40%
+
+### 🌍 Diego - Historia
+
+**Problema**: Cronología de independencias americanas **Solución Lucy**: - Subió mapa de América del siglo XIX - Lucy creó línea temporal interactiva - Conectó eventos entre países - **Resultado**: Aprobó con honor su examen final
+:::
+:::::
+
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
+:::
+
+## Cómo Lucy Te Ayuda Paso a Paso 🔄 {auto-animate="true"}
+
+::::: columns
+::: {.column width="50%" auto-animate="true"}
+### 1. 📤 **Comparte Tu Duda**
+
+-   Escribe tu pregunta en lenguaje natural
+-   Sube foto de tu tarea o ejercicio
+-   No necesitas formateo especial
+-   Lucy entiende escritura a mano
+
+### 2. 🔍 **Lucy Analiza**
+
+-   Identifica el tema y nivel académico
+-   Detecta conceptos clave involucrados
+-   Evalúa tu nivel de comprensión actual
+-   Prepara explicación personalizada
+:::
+
+::: {.column width="50%" auto-animate="true"}
+### 3. 🎓 **Explicación Detallada**
+
+-   Desglose paso a paso del problema
+-   Explicación de conceptos fundamentales
+-   Ejemplos adicionales similares
+-   Conexión con temas relacionados
+
+### 4. ✅ **Verificación de Comprensión**
+
+-   Preguntas para confirmar entendimiento
+-   Ejercicios de práctica sugeridos
+-   Consejos para evitar errores comunes
+-   Seguimiento en próximas sesiones
+:::
+:::::
+
+::: fragment
+### 🎯 **Resultado**: Aprendes el concepto, no solo la respuesta
+:::
+
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
+:::
+
+## Ventajas de Tener Tu Tutor IA 🚀 {auto-animate="true"}
+
+::::: columns
+::: {.column width="50%" auto-animate="true"}
+### 💰 **Económico**
+
+-   Sin costo por hora de tutoría
+-   No necesitas múltiples tutores por materia
+-   Disponible para toda la familia
+-   Inversión única en educación
+
+### ⏰ **Flexible**
+
+-   Estudia cuando quieras, donde quieras
+-   Sin horarios fijos ni citas
+-   Pausa y retoma cuando necesites
+-   Se adapta a tu horario escolar
+:::
+
+::: {.column width="50%" auto-animate="true"}
+### 🎯 **Personalizado**
+
+-   Se adapta a tu ritmo de aprendizaje
+-   Recuerda tus fortalezas y debilidades
+-   Ajusta dificultad automáticamente
+-   Conecta con tus intereses personales
+
+### 📈 **Efectivo**
+
+-   Método probado científicamente
+-   Refuerzo inmediato de conceptos
+-   Práctica deliberada guiada
+-   Seguimiento de progreso continuo
+:::
+:::::
+
+::: {.fragment auto-animate="true"}
+### 🌟 **Resultado**: Mejor rendimiento académico con menos estrés
+:::
+
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
+:::
+
+## Capacidades Técnicas Avanzadas 💻 {auto-animate="true"}
+
+:::::: panel-tabset
+### Análisis de Imágenes 📸
+
+::: {auto-animate="true"}
+-   **OCR Inteligente**: Lee texto manuscrito y digital
+-   **Diagramas Científicos**: Interpreta gráficos y esquemas
+-   **Ecuaciones Matemáticas**: Reconoce fórmulas complejas
+-   **Mapas y Planos**: Analiza información geográfica
+-   **Arte y Diseño**: Evalúa composición y técnica
+-   **Experimentos**: Interpreta resultados de laboratorio
+:::
+
+### Memoria Contextual 🧠
+
+::: {auto-animate="true"}
+-   **Progreso Personal**: Recuerda tu nivel en cada materia
+-   **Conversaciones Anteriores**: Conecta temas relacionados
+-   **Estilo de Aprendizaje**: Se adapta a tus preferencias
+-   **Dificultades Específicas**: Enfoca en áreas problemáticas
+-   **Logros**: Celebra tus avances y mejoras
+-   **Patrones**: Identifica tus mejores horarios de estudio
+:::
+
+### Seguridad y Privacidad 🔒
+
+::: {auto-animate="true"}
+-   **Datos Encriptados**: Toda tu información protegida
+-   **Sin Uso Comercial**: Tus datos no se venden ni comparten
+-   **Acceso Controlado**: Solo tú tienes acceso a tu perfil
+-   **Cumplimiento GDPR**: Estándares internacionales de privacidad
+-   **Backup Seguro**: Tus conversaciones están respaldadas
+-   **Transparencia Total**: Sabes exactamente qué se guarda
+:::
+::::::
+
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
+:::
+
+<!-- ## Guía de Implementación 🛠️ -->
+
+<!-- ::: panel-tabset -->
+<!-- ### Para Instituciones Educativas -->
+
+<!-- ```{r} -->
+<!-- #| eval: false -->
+<!-- #| code-fold: false -->
+
+<!-- # Configuración Escuela/Universidad -->
+<!-- 1. Desplegar en servidores institucionales -->
+<!-- 2. Configurar autenticación de usuarios -->
+<!-- 3. Configurar AWS S3 para almacenamiento -->
+<!-- 4. Personalizar para necesidades curriculares -->
+
+<!-- # Pasos de Integración: -->
+<!-- - Integración LMS (Canvas, Blackboard) -->
+<!-- - Configuración Single Sign-On (SSO) -->
+<!-- - Marca personalizada y temas -->
+<!-- - Configuración dashboard analítico -->
+<!-- ``` -->
+
+<!-- ### Para Educadores Individuales -->
+
+<!-- ```{r} -->
+<!-- #| eval: false -->
+<!-- #| code-fold: false -->
+
+<!-- # Configuración Maestro -->
+<!-- 1. Crear instancia personal -->
+<!-- 2. Configurar cuentas de aula -->
+<!-- 3. Configurar plantillas de tareas -->
+<!-- 4. Monitorear progreso estudiantil -->
+
+<!-- # Gestión de Aula: -->
+<!-- - Crear cuentas de estudiantes -->
+<!-- - Establecer categorías de tareas -->
+<!-- - Rastrear analíticas de aprendizaje -->
+<!-- - Generar reportes de progreso -->
+<!-- ``` -->
+
+<!-- ### Para Estudiantes -->
+
+<!-- **Primeros Pasos:** 1. **📝 Registrarse**: Crear cuenta personal 2. **📸 Subir**: Compartir tareas, notas o preguntas 3. **💬 Chatear**: Hacer preguntas en lenguaje natural 4. **📚 Aprender**: Obtener explicaciones detalladas y orientación 5. **🔄 Seguimiento**: Continuar conversaciones sobre temas 6. **🆕 Reiniciar**: Comenzar conversaciones frescas cuando sea necesario -->
+<!-- ::: -->
+
+## Resultados Comprobados 📊 {auto-animate="true" style="font-size: 0.8em"}
+
 ```{r}
 #| echo: false
-#| fig-height: 3
-#| fig-width: 8
+#| fig-height: 3.5
+#| fig-width: 9
+
 library(ggplot2)
-
-# Crear datos de progresión de aprendizaje
-learning_data <- data.frame(
-  interaccion = 1:8,
-  comprension = c(20, 35, 50, 65, 75, 82, 88, 95),
-  retencion_contexto = c(15, 45, 70, 85, 90, 95, 98, 99)
-)
-
-ggplot(learning_data, aes(x = interaccion)) +
-  geom_line(aes(y = comprension, color = "Comprensión del Estudiante"), size = 2) +
-  geom_line(aes(y = retencion_contexto, color = "Retención de Contexto IA"), size = 2) +
-  geom_point(aes(y = comprension, color = "Comprensión del Estudiante"), size = 3) +
-  geom_point(aes(y = retencion_contexto, color = "Retención de Contexto IA"), size = 3) +
-  labs(title = "Progresión del Aprendizaje con Contexto Persistente",
-       x = "Interacciones de Aprendizaje",
-       y = "Progreso (%)",
-       color = "Métrica") +
-  theme_minimal() +
-  scale_color_manual(values = c("Comprensión del Estudiante" = "#2E86AB", 
-                               "Retención de Contexto IA" = "#A23B72")) +
-  theme(plot.title = element_text(hjust = 0.5, size = 14, face = "bold"))
-```
-
-:::
-
-## Casos de Uso Educativos 📚
-
-::: {.panel-tabset}
-
-### Educación K-12
-**Primaria y Secundaria:**
-- **📐 Resolución de Problemas Matemáticos**: Sube imágenes de ejercicios para soluciones guiadas
-- **🔤 Comprensión Lectora**: Analiza pasajes de texto e imágenes
-- **🌱 Experimentos Científicos**: Sube fotos de laboratorio para análisis
-- **🎨 Proyectos Artísticos**: Obtén retroalimentación creativa y técnicas
-
-**Preparatoria:**
-- **🧪 Química**: Analiza estructuras moleculares y reacciones
-- **📊 Estadística**: Sube gráficos y datos para interpretación
-- **📝 Redacción de Ensayos**: Obtén retroalimentación estructurada y mejoras
-- **🌍 Historia**: Analiza documentos históricos e imágenes
-
-### Educación Superior
-**Universidad:**
-- **🔬 Proyectos de Investigación**: Analiza datos complejos e imágenes
-- **📋 Apoyo de Tesis**: Revisión de literatura y orientación metodológica
-- **💻 Ayuda con Programación**: Debug de código con análisis visual de errores
-- **📈 Ciencia de Datos**: Análisis estadístico y soporte de visualización
-
-### Desarrollo Profesional
-**Maestros y Educadores:**
-- **📖 Desarrollo Curricular**: Crear planes de lección atractivos
-- **📊 Diseño de Evaluaciones**: Desarrollar métodos efectivos de evaluación
-- **🎯 Analítica Estudiantil**: Entender patrones de aprendizaje
-- **💡 Innovación**: Integrar herramientas IA en educación
-
-:::
-
-## Arquitectura Técnica 🏗️
-
-```{mermaid}
-%%| fig-width: 12
-%%| fig-height: 6
-flowchart TB
-    subgraph "Capa Frontend"
-        A[Interfaz Web Shiny]
-        B[Diseño Responsivo]
-        C[Sistema de Carga de Archivos]
-    end
-    
-    subgraph "Capa de Autenticación"
-        D[Gestión de Usuarios]
-        E[Almacenamiento AWS S3]
-        F[Control de Sesiones]
-    end
-    
-    subgraph "Capa de Procesamiento IA"
-        G[OpenAI GPT-4 Vision]
-        H[Integración Ellmer]
-        I[Análisis de Imágenes]
-        J[Gestión de Contexto]
-    end
-    
-    subgraph "Capa de Datos"
-        K[Almacenamiento Persistente]
-        L[Historial de Conversaciones]
-        M[Preferencias del Usuario]
-    end
-    
-    A --> D
-    B --> A
-    C --> A
-    D --> G
-    E --> D
-    F --> D
-    G --> K
-    H --> G
-    I --> G
-    J --> G
-    K --> L
-    K --> M
-    
-    style A fill:#e1f5fe
-    style G fill:#f3e5f5
-    style K fill:#e8f5e8
-```
-
-## Escenarios de Aprendizaje Reales 🌟
-
-::: {.columns}
-
-::: {.column width="50%"}
-### Escenario 1: Ayuda con Matemáticas
-**El estudiante sube**: Problema de geometría con diagrama
-**Lucy proporciona**:
-- Desglose de solución paso a paso
-- Explicación visual de conceptos
-- Problemas de práctica similares
-- Consejos y trucos de aprendizaje
-
-### Escenario 2: Análisis de Laboratorio
-**El estudiante sube**: Imágenes de microscopio
-**Lucy proporciona**:
-- Identificación detallada de especímenes
-- Explicaciones de procesos biológicos
-- Conexión con conceptos del curso
-- Sugerencias de investigación adicional
-:::
-
-::: {.column width="50%"}
-### Escenario 3: Aprendizaje de Idiomas
-**El estudiante sube**: Texto extranjero o señales
-**Lucy proporciona**:
-- Traducción precisa
-- Contexto cultural
-- Explicaciones gramaticales
-- Guías de pronunciación
-
-### Escenario 4: Retroalimentación Artística
-**El estudiante sube**: Obra de arte creativa
-**Lucy proporciona**:
-- Análisis técnico
-- Identificación de estilo
-- Sugerencias de mejora
-- Contexto histórico
-:::
-
-:::
-
-## Funciones Avanzadas en Detalle 🔍
-
-::: {.panel-tabset}
-
-### Capacidades de Análisis de Imágenes
-- **📸 OCR de Documentos**: Extrae texto de notas manuscritas
-- **📊 Lectura de Gráficos**: Interpreta gráficos y visualizaciones de datos
-- **🧬 Imágenes Científicas**: Analiza resultados de laboratorio y especímenes
-- **🎨 Análisis Artístico**: Entiende composición y técnicas
-- **📐 Diagramas Matemáticos**: Resuelve problemas geométricos
-- **🗺️ Mapas y Geografía**: Análisis de ubicación y terreno
-
-### Persistencia de Conversaciones
-- **🔄 Continuidad de Contexto**: Recuerda preguntas e imágenes previas
-- **📈 Progresión de Aprendizaje**: Rastrea mejora a lo largo del tiempo
-- **🎯 Respuestas Personalizadas**: Se adapta a estilos individuales de aprendizaje
-- **📚 Construcción de Conocimiento**: Conecta nuevos conceptos con aprendizaje previo
-
-### Seguridad y Privacidad
-- **🔐 Autenticación de Usuario**: Sistema seguro de inicio de sesión
-- **☁️ Almacenamiento en la Nube**: Integración AWS S3 para escalabilidad
-- **🛡️ Protección de Datos**: Comunicación encriptada
-- **👤 Controles de Privacidad**: Gestión de datos del usuario
-
-:::
-
-## Guía de Implementación 🛠️
-
-::: {.panel-tabset}
-
-### Para Instituciones Educativas
-```{r}
-#| eval: false
-#| code-fold: false
-
-# Configuración Escuela/Universidad
-1. Desplegar en servidores institucionales
-2. Configurar autenticación de usuarios
-3. Configurar AWS S3 para almacenamiento
-4. Personalizar para necesidades curriculares
-
-# Pasos de Integración:
-- Integración LMS (Canvas, Blackboard)
-- Configuración Single Sign-On (SSO)
-- Marca personalizada y temas
-- Configuración dashboard analítico
-```
-
-### Para Educadores Individuales
-```{r}
-#| eval: false
-#| code-fold: false
-
-# Configuración Maestro
-1. Crear instancia personal
-2. Configurar cuentas de aula
-3. Configurar plantillas de tareas
-4. Monitorear progreso estudiantil
-
-# Gestión de Aula:
-- Crear cuentas de estudiantes
-- Establecer categorías de tareas
-- Rastrear analíticas de aprendizaje
-- Generar reportes de progreso
-```
-
-### Para Estudiantes
-**Primeros Pasos:**
-1. **📝 Registrarse**: Crear cuenta personal
-2. **📸 Subir**: Compartir tareas, notas o preguntas
-3. **💬 Chatear**: Hacer preguntas en lenguaje natural
-4. **📚 Aprender**: Obtener explicaciones detalladas y orientación
-5. **🔄 Seguimiento**: Continuar conversaciones sobre temas
-6. **🆕 Reiniciar**: Comenzar conversaciones frescas cuando sea necesario
-
-:::
-
-## Métricas de Éxito e Impacto 📈
-
-```{r}
-#| echo: false
-#| fig-height: 4
-#| fig-width: 10
 
 # Crear datos de evaluación de impacto
 impact_data <- data.frame(
-  Categoria = c("Resolución de Problemas", "Comprensión de Conceptos", "Participación", "Independencia", "Confianza"),
-  Antes_Lucy = c(3.2, 3.1, 2.8, 2.9, 3.0),
-  Despues_Lucy = c(4.6, 4.4, 4.5, 4.3, 4.2)
+  Categoria = c("Calificaciones", "Comprensión", "Confianza", "Autonomía", "Motivación"),
+  Antes_Lucy = c(6.2, 6.1, 5.8, 5.9, 6.0),
+  Despues_Lucy = c(8.6, 8.4, 8.5, 8.3, 8.2)
 )
 
-# Reestructurar manualmente para evitar problemas de dependencia tidyr
+# Reestructurar datos
 impact_long <- data.frame(
   Categoria = rep(impact_data$Categoria, 2),
-  Periodo = c(rep("Antes de Lucy", 5), rep("Después de Lucy", 5)),
+  Periodo = c(rep("Antes de Lucy", 5), rep("Con Lucy", 5)),
   Puntuacion = c(impact_data$Antes_Lucy, impact_data$Despues_Lucy)
 )
 
 ggplot(impact_long, aes(x = Categoria, y = Puntuacion, fill = Periodo)) +
-  geom_col(position = "dodge", alpha = 0.8) +
+  geom_col(position = "dodge", alpha = 0.8, width = 0.7) +
   coord_flip() +
-  labs(title = "Evaluación de Impacto Educativo",
-       subtitle = "Resultados de Aprendizaje Estudiantil (Escala: 1-5)",
+  labs(title = "Mejora del Rendimiento Académico",
+       subtitle = "Resultados de estudiantes usando Lucy (Escala: 1-10)",
        x = "", y = "Puntuación Promedio") +
   theme_minimal() +
-  scale_fill_manual(values = c("Antes de Lucy" = "#FF6B6B", "Después de Lucy" = "#4ECDC4")) +
-  theme(plot.title = element_text(face = "bold", hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5))
+  scale_fill_manual(values = c("Antes de Lucy" = "#FF6B6B", "Con Lucy" = "#4ECDC4")) +
+  theme(plot.title = element_text(face = "bold", hjust = 0.5, size = 12),
+        plot.subtitle = element_text(hjust = 0.5, size = 10),
+        text = element_text(size = 10)) +
+  scale_y_continuous(limits = c(0, 10), breaks = seq(0, 10, 2))
 ```
 
-### Mejoras Clave
-- **📊 44% de aumento** en eficiencia de resolución de problemas
-- **🎯 42% de mejora** en comprensión de conceptos  
-- **🚀 61% de impulso** en participación estudiantil
-- **💪 48% de crecimiento** en independencia de aprendizaje
-- **✨ 40% de aumento** en confianza académica
+::: {.fragment auto-animate="true" style="font-size: 0.8em"}
+### 🎯 Mejoras Destacadas
 
-## Accesibilidad e Inclusión 🌈
-
-::: {.columns}
-
-::: {.column width="50%"}
-### Características de Diseño Universal
-- **♿ Compatible con Lector de Pantalla**: Soporte completo de accesibilidad
-- **🌐 Soporte Multilingüe**: Interfaces en múltiples idiomas
-- **📱 Responsivo Móvil**: Funciona en cualquier dispositivo
-- **🎨 Personalización Visual**: Temas y fuentes ajustables
-- **🔊 Integración de Audio**: Capacidades de entrada/salida de voz
-- **⌨️ Navegación por Teclado**: Accesibilidad completa por teclado
-
-### Soporte para Diferencias de Aprendizaje
-- **🧠 Amigable para TDAH**: Respuestas estructuradas y en pequeñas porciones
-- **👁️ Aprendices Visuales**: Análisis rico de imágenes y diagramas
-- **👂 Aprendices Auditivos**: Explicaciones claras y descripciones
-- **✋ Aprendices Kinestésicos**: Resolución interactiva de problemas
+-   **💯 39% mejor** en calificaciones promedio
+-   **🧠 37% más** comprensión de conceptos\
+-   **💪 47% mayor** confianza académica
+-   **🎯 40% más** autonomía en el estudio
+-   **⚡ 37% mayor** motivación por aprender
 :::
 
-::: {.column width="50%"}
-### Beneficios de Educación Inclusiva
-- **🎯 Aprendizaje Personalizado**: Se adapta a necesidades individuales
-- **⏰ Progreso Autodirigido**: Aprende a tu propio ritmo
-- **🤝 Soporte Colaborativo**: Comparte insights con compañeros
-- **📝 Múltiples Formatos**: Texto, imágenes y explicaciones visuales
-- **🌟 Construcción de Confianza**: Ambiente de aprendizaje sin juicios
-- **🔄 Soporte Continuo**: Disponible 24/7 para aprendizaje
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
 :::
 
+## Testimonios de Estudiantes 🗣️ {auto-animate="true" style="font-size: 0.8em"}
+
+::::: {.columns style="font-size: 0.75em"}
+::: {.column width="50%" auto-animate="true"}
+> *"Antes odiaba matemáticas. Ahora con Lucy entiendo todo paso a paso. ¡Subí de 5 a 9 en mi boletín!"*
+>
+> **- Sofía, 15 años, Bachillerato**
+
+> *"Lucy me ayudó con química orgánica cuando nadie más podía. Explica tan claro que parece fácil."*
+>
+> **- Miguel, 17 años, Preparatoria**
+
+> *"Mi inglés mejoró muchísimo. Lucy corrige mis ensayos y explica por qué cada error está mal."*
+>
+> **- Carla, 16 años, Secundaria**
 :::
 
-## ¡Comienza Hoy Mismo! 🚀
+::: {.column width="50%" auto-animate="true"}
+> *"Trabajo de noche y estudio de día. Lucy está siempre disponible cuando puedo estudiar."*
+>
+> **- Roberto, 19 años, Universidad**
 
-::: {.panel-tabset}
+> *"Para mi tesis de biología, Lucy analizó mis fotos de laboratorio mejor que algunos profesores."*
+>
+> **- Patricia, 22 años, Licenciatura**
 
-### Configuración Rápida
-```{bash}
-#| eval: false
-#| code-fold: false
+> *"Mis padres están felices porque ya no necesito tutor presencial. Lucy es mejor y más barata."*
+>
+> **- Andrés, 14 años, Secundaria**
+:::
+:::::
 
-# 1. Clonar el repositorio
-git clone https://github.com/roldanalex/Personal-Assistant-AI.git
-
-# 2. Navegar al directorio de la app
-cd Personal-Assistant-AI/app
-
-# 3. Configurar variables de entorno
-# Crear archivo .Renviron con:
-OPENAI_API_LUCY_SHINY=tu_clave_api_openai
-personal_aws_access_key=tu_clave_aws
-personal_aws_secret_key=tu_secreto_aws
-s3ytfeedapp=tu_bucket_s3
-
-# 4. Instalar paquetes R
-Rscript -e "install.packages(c('shiny', 'ellmer', 'shinychat', 'aws.s3'))"
-
-# 5. Lanzar la aplicación
-Rscript -e "shiny::runApp()"
-```
-
-### Integración Educativa
-**Paso 1**: **Programa Piloto**
-- Comenzar con una clase o materia
-- Entrenar 2-3 educadores en la plataforma
-- Recopilar retroalimentación inicial e iterar
-
-**Paso 2**: **Despliegue Gradual**
-- Expandir a nivel departamental
-- Crear pautas de uso y mejores prácticas
-- Desarrollar estrategias de integración curricular
-
-**Paso 3**: **A Nivel Institucional**
-- Desplegar en todos los programas relevantes
-- Establecer programas de soporte y entrenamiento
-- Monitorear analíticas de uso y resultados
-
-### Costo y Escalabilidad
-- **💰 Costo-Efectivo**: Pagar solo por uso de IA
-- **📈 Escalable**: Crece con tu institución
-- **🛠️ Personalizable**: Se adapta a necesidades específicas
-- **📊 Analítica**: Rastrea uso y resultados de aprendizaje
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
 :::
 
-## Hoja de Ruta Futura 🔮
+## Cómo Empezar con Lucy Hoy 🚀 {auto-animate="true" style="font-size: 0.8em"}
 
-::: {.columns}
+::::: {.columns style="font-size: 0.8em"}
+::: {.column width="60%" auto-animate="true"}
+### 📱 **Pasos Súper Fáciles** {style="font-size: 0.85em"}
 
-::: {.column width="50%"}
-### Mejoras Planificadas
-- **🎥 Análisis de Video**: Subir y analizar videos educativos
-- **🔊 Integración de Voz**: Voz a texto y texto a voz
-- **📝 Calificación Automatizada**: Evaluación de tareas con IA
-- **👥 Espacios Colaborativos**: Ambientes de aprendizaje grupal
-- **📊 Analítica Avanzada**: Insights detallados de aprendizaje
-- **🌐 Integración API**: Conectar con herramientas educativas existentes
+1.  **Crear Cuenta** → Solo email y contraseña
+2.  **Subir Primera Tarea** → Foto o texto de tu duda
+3.  **Recibir Ayuda** → Explicación personalizada inmediata
+4.  **Seguir Practicando** → Lucy recuerda tu progreso
 
-### Investigación y Desarrollo
-- **🧠 Aprendizaje Adaptativo**: IA que aprende preferencias estudiantiles
-- **🎯 Analítica Predictiva**: Identificar brechas de aprendizaje temprano
-- **🤖 Razonamiento Avanzado**: Resolución más sofisticada de problemas
-- **🌍 Accesibilidad Global**: Soporte para más idiomas
+### 💻 **Dispositivos Compatibles** {style="font-size: 0.85em"}
+
+-   🖥️ Computadora (Windows/Mac/Linux)
+-   📱 Celular (Android/iPhone)
+-   📟 Tablet (iPad/Android)
+-   🌐 Cualquier navegador web
 :::
 
-::: {.column width="50%"}
-### Construcción de Comunidad
-- **👨‍🏫 Entrenamiento de Educadores**: Programas de desarrollo profesional
-- **📚 Biblioteca de Recursos**: Planes de lección y actividades compartidas
-- **🏆 Mejores Prácticas**: Historias de éxito y estudios de caso
-- **🤝 Asociaciones**: Integración con editores educativos
-- **🔬 Colaboración de Investigación**: Oportunidades de investigación académica
-- **💡 Laboratorios de Innovación**: Características experimentales y pruebas
+::: {.column width="40%" auto-animate="true"}
+### 🎯 **Para Estudiantes** {style="font-size: 0.85em"}
 
-### Sostenibilidad
-- **♻️ Computación Verde**: Procesamiento IA eficiente
-- **💚 Impacto Social**: Democratizando educación de calidad
-- **🌱 Aprendizaje Continuo**: Evolucionando con necesidades educativas
-- **🤝 Código Abierto**: Desarrollo impulsado por comunidad
+-   ✅ Cuenta gratuita básica
+-   ✅ 10 consultas diarias
+-   ✅ Análisis de imágenes
+-   ✅ Chat persistente
+
+### 👨‍👩‍👧‍👦 **Para Familias** {style="font-size: 0.85em"}
+
+-   ✅ Múltiples cuentas
+-   ✅ Seguimiento parental
+-   ✅ Reportes de progreso
+-   ✅ Soporte 24/7
+:::
+:::::
+
+::: {.fragment auto-animate="true" style="font-size: 0.9em"}
+### 🎁 **¡Prueba GRATIS por 30 días!**
 :::
 
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
 :::
 
-## Llamada a la Acción 📢 {.center}
+## El Futuro del Aprendizaje 🔮 {auto-animate="true"}
 
-::: {.r-fit-text}
-**¡Transforma la Educación con IA Hoy!**
+::::: columns
+::: {.column width="50%" auto-animate="true"}
+### 🆕 **Próximas Funciones**
+
+-   **🎥 Videos Educativos**: Análisis de contenido audiovisual
+-   **🗣️ Tutor por Voz**: Conversaciones habladas
+-   **👥 Estudio Grupal**: Sesiones colaborativas
+-   **📊 Analítica Avanzada**: Insights de aprendizaje
+-   **🎮 Gamificación**: Aprender jugando
+-   **🤖 IA Más Inteligente**: Comprensión aún mejor
+
+### 🌍 **Impacto Global**
+
+-   **Acceso Universal**: Educación para todos
+-   **Idiomas Múltiples**: Soporte mundial
+-   **Costos Reducidos**: Educación accesible
+-   **Calidad Consistente**: Estándares altos siempre
 :::
 
-::: {.columns}
+::: {.column width="50%" auto-animate="true"}
+### 🎯 **Tu Éxito Académico**
 
-::: {.column width="50%"}
-### Para Educadores e Instituciones
-🚀 **Inicia tu Programa Piloto**
-- [**Programar Demo**](mailto:alexis.m.roldan.ds@gmail.com?subject=Lucy%20AI%20Demo%20Request)
-- [**Descargar Guía de Configuración**](https://github.com/roldanalex/Personal-Assistant-AI)
-- [**Únete a Red de Educadores**](mailto:alexis.m.roldan.ds@gmail.com?subject=Educator%20Network)
+-   **Mejor Rendimiento**: Calificaciones más altas
+-   **Mayor Confianza**: Menos estrés en exámenes
+-   **Aprendizaje Profundo**: Comprensión real
+-   **Autonomía**: Menos dependencia de otros
+-   **Preparación Universitaria**: Bases sólidas
+-   **Habilidades del Futuro**: Pensamiento crítico
 
-### Para Estudiantes
-📚 **Comienza tu Aprendizaje Mejorado con IA**
-- Prueba la instancia demo
-- Sube tu primera pregunta de tarea
-- Experimenta el aprendizaje personalizado
+### 🚀 **¡El Cambio Empieza Contigo!** {style="font-size: 0.85em"}
+:::
+:::::
+
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
 :::
 
-::: {.column width="50%"}
-### Para Desarrolladores
-💻 **Contribuye y Personaliza**
-- Hacer fork del repositorio
-- Agregar nuevas características
-- Compartir mejoras
+## ¡Tu Éxito Académico Comienza Ahora! 📢 {.center auto-animate="true" style="font-size: 0.8em"}
 
-### Para Investigadores
-🔬 **Colabora y Estudia**
-- Investigación de impacto educativo
-- Estudios de efectividad del aprendizaje IA
-- Proyectos de mejora de accesibilidad
+::: {.r-fit-text auto-animate="true" style="font-size: 0.8em"}
+**¡Únete a Miles de Estudiantes Exitosos!**
 :::
 
+::::: {.columns style="font-size: 0.8em"}
+::: {.column width="50%" auto-animate="true"}
+### 🎓 **Para Estudiantes** {style="font-size: 0.85em"}
+
+🚀 **Comienza Tu Transformación Académica** - [**Crear Cuenta Gratis**](mailto:alexis.m.roldan.ds@gmail.com?subject=Lucy%20AI%20Student%20Account) - [**Ver Demo en Vivo**](https://github.com/roldanalex/Personal-Assistant-AI) - [**Unirse a Comunidad Estudiantil**](mailto:alexis.m.roldan.ds@gmail.com?subject=Student%20Community)
+
+### 👨‍👩‍👧‍👦 **Para Padres** {style="font-size: 0.85em"}
+
+📚 **Invierte en el Futuro de tus Hijos** - Prueba gratuita por 30 días - Sin compromiso a largo plazo - Resultados visibles desde la primera semana - Soporte familiar completo
 :::
 
-## ¡Gracias! 🙏 {.center}
+::: {.column width="50%" auto-animate="true"}
+### 🏫 **Para Instituciones** {style="font-size: 0.85em"}
 
-::: {.columns}
+💻 **Revoluciona tu Educación** - Programa piloto sin costo - Capacitación incluida - Soporte técnico 24/7 - Resultados medibles
 
-::: {.column width="50%"}
-### Contacto y Recursos
+### 👨‍🏫 **Para Educadores** {style="font-size: 0.85em"}
 
-📧 **Email**: alexis.m.roldan.ds@gmail.com  
-🐙 **GitHub**: [@roldanalex](https://github.com/roldanalex)  
-🔗 **Repositorio**: [Personal-Assistant-AI](https://github.com/roldanalex/Personal-Assistant-AI)  
-📚 **Documentación**: Disponible en repositorio  
+🔬 **Potencia tu Enseñanza** - Herramientas de vanguardia - Analíticas de progreso estudiantil - Reducción de carga de trabajo - Mejores resultados académicos
+:::
+:::::
 
-### ¡Involúcrate Hoy!
-[🚀 **Prueba Lucy Ahora**](http://your-demo-url.com){.btn .btn-primary}
-[📖 **Lee la Documentación**](https://github.com/roldanalex/Personal-Assistant-AI){.btn .btn-secondary}
+::: footer
+Lucy AI Assistant - Tu Tutor Personal Inteligente 🤖✨
 :::
 
-::: {.column width="50%"}
-### Preguntas y Discusión
+## ¡Comienza Tu Transformación Educativa Hoy! 🌟 {.center auto-animate="true" style="font-size: 0.8em"}
 
-**¿Listo para revolucionar la educación con IA?**
-
-- ¿Estrategias de implementación?
-- ¿Ideas de integración curricular?
-- ¿Requisitos técnicos?
-- ¿Necesidades de despliegue personalizado?
-- ¿Oportunidades de colaboración en investigación?
-
-**¡Construyamos juntos el futuro de la educación mejorada con IA!**
+::: {.r-fit-text auto-animate="true" style="font-size: 0.8em"}
+**Lucy AI - Donde la Educación Se Encuentra con el Futuro**
 :::
 
+:::::: {.columns style="font-size: 0.8em"}
+::: {.column width="60%" auto-animate="true"}
+### 📞 **Contacto y Soporte** {style="font-size: 0.85em"}
+
+📧 **Email:** [alexis.m.roldan.ds\@gmail.com](mailto:alexis.m.roldan.ds@gmail.com) 🌐 **GitHub:** [github.com/roldanalex/Personal-Assistant-AI](https://github.com/roldanalex/Personal-Assistant-AI) 💬 **WhatsApp:** +51 999 xxx xxx (Soporte en Español)
+
+### 🎯 **Próximos Pasos** {style="font-size: 0.85em"}
+
+1.  **📝 Regístrate** → Cuenta gratuita en minutos
+2.  **🎮 Explora** → Tutorial interactivo incluido\
+3.  **📚 Aprende** → Primera sesión de tutoría gratis
+4.  **🏆 Destaca** → Mejora tus notas en 30 días
 :::
 
----
+:::: {.column width="40%" auto-animate="true"}
+### 🎁 **Oferta de Lanzamiento** {style="font-size: 0.85em"}
 
-*Lucy AI Assistant - Empoderando aprendices y educadores con asistencia IA inteligente y multimodal*
+::: {.fragment .highlight-red style="font-size: 0.8em"}
+**¡Primeros 100 Estudiantes!** - ✅ Acceso premium por 3 meses - ✅ Sesiones de tutoría ilimitadas - ✅ Soporte prioritario 24/7 - ✅ Herramientas avanzadas incluidas
+:::
+
+### ⏰ **Solo por Tiempo Limitado** {style="font-size: 0.85em"}
+
+🗓️ **Hasta: 31 de Diciembre 2024**
+::::
+::::::
+
+::: {.r-fit-text auto-animate="true" style="font-size: 0.8em"}
+**¿Listo para ser el próximo estudiante exitoso?**
+:::
+
+------------------------------------------------------------------------
+
+*Lucy AI Assistant - Educación Personalizada con Inteligencia Artificial 🤖📚✨*
